aggiornato pom.xml